# exa

./: .editorconfig  .travis.yml  AUTHORS  CMakeLists.txt  ISSUE_TEMPLATE.md  LICENSE  README.md
cmake/: colorize.cmake
include/exa/: exa.h
libs/: CMakeLists.txt
src/exa/: exa.cpp
tests/: errorredirector.h  test_exa.cpp
